<resources>
    <string name="app_name">DateNode.cz</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_logout">Odhlášení</string>
    <string name="title_activity_chat">Chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stream">StreamActivity</string>

    <!-- tlačítka -->
    <string name="moder_data">více</string>
    <string name="title_activity_item_actvity">ItemActvity</string>

    <string name="add_comment_field">Napište komentář...</string>
    <string name="add_comment_btn">Přidat komentář</string>
    <string name="Conversations_title">Konverzace</string>
    <string name="Placeholder_chat_last_message">Poslední zpráva mezi uživateli</string>
    <string name="Placeholder_conversation_name">Leopold Skočdopole</string>
    <string name="Placeholder_chat_message_text">Lorem ipsum dolor sit amet, jeden týpek se mnou pěkně zamet.</string>
    <string name="Placeholder_chat_last_active">online</string>
    <string name="Placeholder_chat_sended_time">12.5. 2015 15:24</string>
    <string name="Chat_close_tab_hint">Zavřít záložku</string>
    <string name="ClosingCross">X</string>


    <!-- Nahrávání obrázku   -->
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>

    <!-- Chatové okno -->
    <string name="Closing_hint">Zavřít záložku</string>
    <string name="SendButtonText">Odeslat</string>
    <string name="LoadMoreMessagesButtonText">Načíst další zprávy...</string>
    <string name="StreamTitle">Stream</string>

</resources>
