<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messageItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Placeholder_conversation_name"
        android:id="@+id/messageSender"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Placeholder_chat_message_text"
        android:id="@+id/messageText"
        android:layout_below="@+id/messageSender"
        android:layout_alignLeft="@+id/messageSender"
        android:layout_alignStart="@+id/messageSender"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Placeholder_chat_sended_time"
        android:id="@+id/chatMessageTime"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/messageSender"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>